Version 3.3svn release Notes

- Remove old telescope plugins, you may have to set your telescope again.
- New INDI telescope control panel.
- New integrated LX200 and Encoder driver replace the plugin. Work on all platform.
- Rotate camera or guider with arrow keys. Activate with Shift+C, Shift+G or Shift+S
- "Move label" now set new RA/DEC for the label. Use "Offset Label" to get the old behavior.
- Add line from moved labels, setup option is in display/labels.
- Add pictures of DSO and planet in the information detail window.
- Add catalog source in object list and detail information.
- Add print description and number of copies.
- Add print preview.
- Add option in Setup/Display for antialias drawing of the map on the screen, this can slowdown the display.
- Observatory favorite list, new observatory database window.
- Internet localization of your location.
- Display an online image of the Sun from SDO or SOHO.
- New Animation and movie recording function. See documentation for ffmpeg program installation.
- Planet computation use JPL ephemeris.
- Add Planet graph in calendar, contributed by John Sunderland.
- Add artificials satellites to the calendar. Click in a line to display the satellite pass on the map. You need to install Wine on Linux and Mac.
- Add solar system objects velocity information.
- Copy current coordinates from right click menu.
- Double click and objet directly open the detail window.
- Ctrl + mouse over an object show information in status bar.
- Fill below horizon area with horizon color.
- No confirmation to save on exit if this is selected in the menu.
- Locked object setting is now saved with the configuration, beware you can get a "below the horizon" the next time you launch the program.
- Option to reset initial program default.
- Add "tonight" button in time setting, it set the time to evening astronomical twilight.
- Better rendering of filled local horizon line for large altitude change.
- Fix dotted line display.